# TkTkT

./: .gitignore  README.md  pyproject.toml
doc/: TODO.md
src/tktkt/: __init__.py  paths.py
src/tktkt/builders/: base.py  english.py
src/tktkt/evaluation/: __init__.py  compare.py  context.py  entropy.py  fertility.py  morphological.py  observing.py  speed.py
src/tktkt/factories/: artifacts.py  deserialisation.py  evaluation.py  evaluators.py  preprocessing.py  preprocessors.py  specials.py  tokenisers.py
src/tktkt/files/: loaders.py  paths.py
src/tktkt/interfaces/: __init__.py  artifactories.py  factories.py  general.py  huggingface.py  identifiers.py  observables.py  observers.py  preparation.py  preprocessors.py  specials.py  storage.py  tokeniser.py  tokenisers.py  vocabulariser.py  vocabularisers.py
src/tktkt/models/bpe/: __init__.py  _results.md  base.py  decomposing.py  dlg.py  dropout.py  ensure.py  guided.py  knockout.py  mergeless.py  objectives.py  picky.py  sbpe.py  scaffold.py  segmentation.py  shuffle.py  statistical.py  trimmed.py  trimmedbpe.py  truncated.py  vocabularisation.py
src/tktkt/models/builders/: base.py  english.py
src/tktkt/models/compressive/: lzw.py
src/tktkt/models/del/: segmentation.py
src/tktkt/models/dele/: segmentation.py  training.py
src/tktkt/models/factories/: base.py  english.py
src/tktkt/models/greedy/: directional.py  randomaccess.py
src/tktkt/models/huggingface/: bpe.py  wrapper.py
src/tktkt/models/identity/: segmentation.py
src/tktkt/models/kudopiece/: _documented.py  _results.md  native.py  segmentation.py  training.py  vocabularisation.py
src/tktkt/models/linguistic/: hece.py
src/tktkt/models/linguistic/dele/: segmentation.py  training.py
src/tktkt/models/morfessor/: lmvr.py
src/tktkt/models/neural/: _results.md  canine_finetuning.py
src/tktkt/models/ngram/: alphabet.py  base.py  hf.py  strided.py  vocabularisation.py
src/tktkt/models/predictive/: treetok.py
src/tktkt/models/predictive/viterbi/: _deprecated.py  _results.md  accumulators.py  framework.py  instances.py  objectives_guided.py  objectives_postprocessors.py
src/tktkt/models/random/: generationbased.py  grampa.py  graph.py  pathmarkov.py  randomfromvocab.py  rejectionsampling.py  stochastok.py  unconstrained.py
src/tktkt/models/sage/: inference.py  schedules.py  vocabularisation.py
src/tktkt/models/stateful/: base.py
src/tktkt/models/trivial/: lookup.py
src/tktkt/models/viterbi/: __init__.py  _deprecated.py  _results.md  _results_training.md  accumulators.py  framework.py  guided.py  instances.py  lattice.py  lengthproduct.py  objectives_guided.py  objectives_postprocessors.py  objectives_unguided.py  trie.py  unguided.py
src/tktkt/models/volt/: vocabularisation.py
src/tktkt/models/word/: segmentation.py  vocabularisation.py
src/tktkt/preparation/: boundaries.py  huggingface.py  instances.py  mappers.py  perturbers.py  spacemarking.py  splitters.py
src/tktkt/util/: accelerate.py  aggregates.py  arrays.py  combinatorics.py  dicts.py  environment.py  exceptions.py  functions.py  interfaces.py  iterables.py  lists.py  printing.py  strings.py  timing.py  trie.py  types.py
src/tktkt/visualisation/bpe/: trees.py
src/tktkt/visualisation/charts/: token_distributions.py
src/tktkt/visualisation/huggingface/: fijectcallback.py
src/tktkt/visualisation/lattices/: segmentation.py
src/tktkt/visualisation/neural/: splitpoints_probabilities.py
src/tktkt/wrappers/: compactedvocab.py  fallbackvocab.py  hashingvocab.py  multiplexing.py  wordlevelunk.py
tst/: preamble.py
tst/evaluation/: canine_fulldataset.py  confusionmatrix_efficiency.py  english_morphology.py  fertility.py  mattr.py  test_alignment_metircs.py  test_av.py  test_canine_fulldataset.py  test_confusionmatrix_efficiency.py  test_fertility.py  test_mattr.py
tst/finetuning/: canine.py  canine_boundaries.py
tst/inference/: test_bpe.py  test_canine.py  test_graphsampler.py  test_hece.py  test_kudopiece.py  test_multiplexing.py  test_ngram.py  test_random.py  test_wrappers.py
tst/inference/viterbi/: _deprecated.py  enumerate.py  framework.py  guided.py  test_framework.py  test_guided.py  test_postprocessors.py
tst/preparation/: albert.py  bpe.py  bytemapping.py  perturb.py  punctuation.py  reverse.py  roberta.py  teetwopiece.py  test_bytemapping.py  test_hf.py  test_perturb.py  test_roberta.py  tst_multilingual.py  tst_roberta.py
tst/syntax/: generics.py
tst/training/: bpe.py  canine.py  dele.py  kudopiece.py  lzw.py  ngram.py  test_dele.py  test_ngram.py
tst/util/: test_comb.py  test_dicts.py  test_trie.py  test_vocab.py  tst_printing.py
tst/visualisation/: bpe.py  canine_boundaries.py
tst/viterbi/: framework.py  guided.py  unguided.py
