[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tktkt"
version = "2025.09.01"  # Don't forget to replace __version__ as well.
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Tokeniser toolkit: a collection of Pythonic subword tokenisers and supporting tools."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["NLP", "tokenizers", "tokenization", "subwords", "segmentation", "natural language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers",
    "tokenizers",
    "datasets",
    "evaluate",

    "regex",
    "bpeasy",
    "sentencepiece",
    "nlpaug",
    "fugashi",
    "ipadic",
    "pythainlp"
]

# These are not optional, but if you have these packages as editable install, you don't want to let pip install them again!
[project.optional-dependencies]
github = [
    "modest[github]       @ git+https://github.com/bauwenst/MoDeST",
    "bpe_knockout[github] @ git+https://github.com/bauwenst/BPE-knockout",
    "sage_tokenizer       @ git+https://github.com/bauwenst/SaGe-tokeniser",
    "fiject               @ git+https://github.com/bauwenst/fiject",
    "clavier              @ git+https://github.com/MaxHalford/clavier"
]

# Include data and tokeniser files.
[tool.setuptools.package-data]
"*" = ["*.txt"]
