[project]
name = "tktkt"
version = "v2026.04.01"  # Don't forget to replace __version__ as well.
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Tokeniser toolkit: a collection of Pythonic subword tokenisers and text preprocessing tools."
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["NLP", "tokenizers", "tokenization", "subwords", "segmentation", "natural language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # HuggingFace. We do NOT include 'transformers' by default because this is an incredibly heavy package, and it is only needed for TkTkT's forwards/backwards-compatibility modules.
    "tokenizers",
    "datasets",
    "evaluate",

    # Official tokenisers
    "bpeasy",  # (discontinued; use PickyBPE)
    "sentencepiece",

    # Preprocessing
    "regex",
    "fugashi",
    "ipadic",
    "pythainlp",
    "nlpaug",
    "wtpsplit",

    # Misc
    "dacite",
    "langcodes",
    "clavier_lib",
]

[project.optional-dependencies]
all = [  # All my other packages, from PyPI. We don't install them by default to avoid overriding editable installs.
    "fiject",
    "bpe_knockout[all]",
    "modest_bauwenst[all]",

    "pickybpe_bauwenst",
    "sage_bauwenst"
]
github = [  # All remaining packages, by me or others, that are not on PyPI.
]
hf = [  # Only if you want functionality that uses PreTrainedTokenizer and SpecialsMixin.
    "transformers"
]

[project.urls]
Repository = "https://github.com/bauwenst/TkTkT"
"Bug Tracker" = "https://github.com/bauwenst/TkTkT/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Include data and tokeniser files.
[tool.setuptools.package-data]
"*" = ["*.txt"]
